packages/truffle/test/sources/migrations/success/contracts/PayableExample.sol
pragma solidity ^0.5.0;


contract PayableExample {
  string public id = 'PayableExample';
  constructor() public payable {}
}
