packages/truffle/test/sources/migrations/error/contracts/ExampleAssert.sol
pragma solidity ^0.5.0;


contract ExampleAssert {
  constructor() public {
    assert(false);
  }
}
